force-app/main/default/objects/Entitlement/fields/SVMXA360__AvailableServiceAmount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AvailableServiceAmount__c</fullName>
    <description>The remaining entitlement service amount.</description>
    <formula>SVMXA360__TotalServiceAmount__c  -  SVMXA360__ConsumedServiceAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Service Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>