force-app/main/default/objects/Entitlement/fields/SVMXA360__AvailableServiceCount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AvailableServiceCount__c</fullName>
    <description>The available entitlement service count.</description>
    <formula>SVMXA360__TotalServiceCount__c  -  SVMXA360__ConsumedServiceCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Service Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>