force-app/main/default/objects/Entitlement/fields/SVMXA360__CaseEntitlementProcessId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CaseEntitlementProcessId__c</fullName>
    <description>Reference to Case Entitlement Process.</description>
    <label>Case Entitlement Process</label>
    <length>20</length>
    <type>Text</type>
</CustomField>