force-app/main/default/objects/Entitlement/fields/SVMXA360__ConsumedServiceAmount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ConsumedServiceAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The consumed entitlement service amount.</description>
    <label>Consumed Service Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>