force-app/main/default/objects/Entitlement/fields/SVMXA360__ConsumedServiceCount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ConsumedServiceCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The consumed entitlement service count.</description>
    <label>Consumed Service Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>