force-app/main/default/objects/Entitlement/fields/SVMXA360__EntitledServiceId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledServiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self lookup to header entitlement service record.</description>
    <label>Entitled Service</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>