force-app/main/default/objects/Entitlement/fields/SVMXA360__EntitledServiceProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledServiceProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to entitled service product.</description>
    <label>Entitled Service Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>