force-app/main/default/objects/Entitlement/fields/SVMXA360__ServiceAmountAlertThreshold__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceAmountAlertThreshold__c</fullName>
    <description>Threshold amount to alert entitlement service in the interactive entitlement screen.</description>
    <label>Display Alert Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>