force-app/main/default/objects/Entitlement/fields/SVMXA360__ServiceCountAlertThreshold__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceCountAlertThreshold__c</fullName>
    <description>Threshold count to alert entitlement service in the interactive entitlement screen.</description>
    <label>Display Alert Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>