force-app/main/default/objects/Entitlement/fields/SVMXA360__ServiceCountType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceCountType__c</fullName>
    <description>The entitlement service unit.</description>
    <label>Service Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visits</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Credits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>