force-app/main/default/objects/Entitlement/fields/SVMXA360__TotalServiceAmount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalServiceAmount__c</fullName>
    <description>The total available entitlement service amount.</description>
    <label>Total Service Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>