force-app/main/default/objects/Entitlement/fields/SVMXA360__TotalServiceCount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalServiceCount__c</fullName>
    <description>The total available entitlement service count.</description>
    <label>Total Service Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>