force-app/main/default/objects/Entitlement/fields/SVMXA360__WorkOrderEntitlementProcessId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkOrderEntitlementProcessId__c</fullName>
    <description>Reference to WorkOrder Entitlement Process.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>WorkOrder Entitlement Process</label>
    <length>20</length>
    <type>Text</type>
</CustomField>