force-app/main/default/objects/Entitlement/recordTypes/SVMXA360__EntitledServices.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__EntitledServices</fullName>
    <active>true</active>
    <description>To capture service activities covered under the contract</description>
    <label>Entitled Services</label>
</RecordType>