force-app/main/default/objects/Entitlement/recordTypes/SVMXA360__SLA.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__SLA</fullName>
    <active>true</active>
    <description>To capture Entitlement Process by Case or Work Order for the Entitled Service</description>
    <label>SLA</label>
</RecordType>