force-app/main/default/objects/Entitlement/validationRules/SVMXA360__A360_Contract_Start_End_date_check.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXA360__A360_Contract_Start_End_date_check</fullName>
    <active>true</active>
    <description>On Entitled Services, if the Contract Line does not exist and Service Contract exists then the start and end date should be within the start and end date of the Service Contract.</description>
    <errorConditionFormula>AND(
  ISBLANK(ContractLineItemId),
  NOT(ISBLANK(ServiceContractId)),
  OR(
    AND(
      NOT(ISBLANK(StartDate)),
      NOT(ISBLANK(ServiceContract.StartDate)),
      StartDate &lt; ServiceContract.StartDate
    ),
    AND(
      NOT(ISBLANK(EndDate)),
      NOT(ISBLANK(ServiceContract.EndDate)),
      EndDate &gt; ServiceContract.EndDate
    )
  )
)</errorConditionFormula>
    <errorMessage>The start and end date should be within the start and end date of the Service Contract.</errorMessage>
</ValidationRule>