force-app/main/default/objects/Entitlement/listViews/SVMXA360__All_Entitlements.listView-meta.xml
<ListView>
    <fullName>SVMXA360__All_Entitlements</fullName>
    <columns>ENTITLEMENT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ENTITLEMENT.STARTDATE</columns>
    <columns>ENTITLEMENT.ENDDATE</columns>
    <columns>ENTITLEMENT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>All Entitlements</label>
</ListView>